# airflow-dag-factory

./: .dag_factory_key  Makefile  README.md  config_validation_cli.py  dag-factory  dag_factory.py  dag_factory_monitor.py  deployment_guide.md  generate_dag.py  pyproject.toml  requirements-dag-factory.txt  requirements-dev.txt  validate_docs.py
.github/: copilot-instructions.md
.github/workflows/: dag-factory-ci.yaml
dags/configs/: customer_etl.yaml  customer_simple.yaml  data_quality_checks.yaml  etl_user_data.yaml  ml_model_training.yaml  recommendations_ml.yaml
dags/functions/: __init__.py  data_quality.py  data_validation.py  etl.py  main.py  ml.py
dags/security/: roles.yaml
dags/security/encryption_keys/: README.md
dags/templates/: base_etl.yaml  daily_etl.yaml  ml_pipeline.yaml
docker/: Dockerfile.dag-factory  docker-compose.dag-factory.yaml
docs/: README.md  api_reference.md  deployment_guide.md  implementation-requirements.md  security_guide.md  user_guide.md
src/: __init__.py  cli.py  dag_factory.py  self_service_ui.py  utils.py
src/managers/: __init__.py  security.py  template.py
tests/: test_dag_factory.py
